--- a/biblio.bib
+++ b/biblio.bib
@@ -379,3 +379,14 @@ DOI = {10.3390/rs70912356}
   year={2011},
   publisher={Bioinfo Publications}
 }
+
+@article{celeux1995gaussian,
+  title={Gaussian parsimonious clustering models},
+  author={Celeux, Gilles and Govaert, G{\'e}rard},
+  journal={Pattern recognition},
+  volume={28},
+  number={5},
+  pages={781--793},
+  year={1995},
+  publisher={Elsevier}
+}
