--- a/biblio.bib
+++ b/biblio.bib
@@ -404,3 +404,25 @@ DOI = {10.3390/rs70912356}
    note = "Traduit du japonais : (Jōhō kika no hōhō), édité par Iwanami Shoten en 1993",
    year = 2000
 }
+
+@article{villa2011hyperspectral,
+  title={Hyperspectral image classification with independent component discriminant analysis},
+  author={Villa, Alberto and Benediktsson, J{\'o}n Atli and Chanussot, Jocelyn and Jutten, Christian},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  volume={49},
+  number={12},
+  pages={4865--4876},
+  year={2011},
+  publisher={IEEE}
+}
+
+@article{marill1963effectiveness,
+  title={On the effectiveness of receptors in recognition systems},
+  author={Marill, Thomas and Green, D},
+  journal={IEEE transactions on Information Theory},
+  volume={9},
+  number={1},
+  pages={11--17},
+  year={1963},
+  publisher={IEEE}
+}
