--- a/paper.tex
+++ b/paper.tex
@@ -106,13 +106,19 @@ However, processing this data is more and more challenging because of statistica
 
 The computational issues are multiple. The computing infrastructure needed to process data is more and more expensive because the processing might requires a GPU and a large amount of RAM to load images which can weight a dozen of gigabytes \cite{christophe2011remote}\cite{plaza2011high}. The processing time is also limiting and requires to use parallelize computing (GPU, multi-threading).
 
-A possible method to solve these issues is to perform a reduction of dimension. It is possible to extract a set of relevant features to get a parsimonious representation of the data \cite{jimenez1998supervised}.
+A possible method to solve these issues is to perform a reduction of dimension. It is possible to extract a set of relevant features to get a parsimonious representation of the data \cite{jimenez1998supervised}. For instance, in land-cover classification, given a set of spatial, temporal and spectral features, it is possible to extract those which are the most discriminant for the purpose of classification \cite{fassnacht2014comparison}. In hyperspectral data analysis from the hundreds of available spectral channels, it is possible to reduce the number of channels to make the processing more efficient in terms of statistical complexity because of the reduction of the number of parameters to estimate and thus also in term of computational time.
 
-For instance, in land-cover classification, given a set of spatial, temporal and spectral features, it is possible to extract those which are the most discriminant for the purpose of classification \cite{fassnacht2014comparison}. In hyperspectral data analysis from the hundreds of available spectral channels, it is possible to reduce the number of channels to make the processing more efficient in terms of statistical complexity because of the reduction of the number of parameters to estimate and thus also in term of computational time. Moreover, dimensional reduction might improves the capacity of generalization of the classifier and avoid overfitting.
+The objective of feature selection is to retrieve the most compact representation of the data with minimum loss of information \cite{Guyon:2006:FEF:1208773}. By deleting the redundant information, feature selection allows to reduce dimension and thus avoid statistical issue, increase algorithm speed and limit storage requirements. Moreover, it adds several beneficial side effects. It improves data understanding by identify where is the most relevant information and it is then possible to save resources when organizing a new data acquisition.
 
-There are two ways to reduce dimension \cite{Guyon:2006:FEF:1208773}: features extraction and feature selection. Feature extraction means creating new features by combining the existing ones, for example linear combination as in Principal Component Analysis \cite{jimenez1998supervised}. To the contrary, features selection selects a subset of existing features. It has the advantage to be much more interpretable for the end-user. The selected subset of features corresponds to the most important features for the given task.
+There are two ways to reduce dimension \cite{Guyon:2006:FEF:1208773}: features extraction and feature selection. Feature extraction means reformulate and summarize the information by creating new features in combining the existing ones. Linear combinations of the initial features can be extracted as in Principal Component Analysis \cite{jimenez1998supervised} or in independent component analysis \cite{villa2011hyperspectral}. Supervised extraction method has also been investigate such as Fischer discriminant analysis. To the contrary, features selection selects a subset of existing features identified as the most relevant for a given criterion. It has the advantage to be much more interpretable for the end-user. The selected subset of features corresponds to the most important features for the given task.
 
-There is a large diversity of methods for feature selection. However, they usually do not scale well with the number of pixels to be processed \cite{fauvel2015fast}. Nevertheless, methods based on Gaussian Mixture Models (GMM) have several interesting properties that make them suitable for feature selection in the context of large amount of data. By taking advantage of their intrinsic properties, it is possible to increase the computational efficiency with respect to standard implementation.
+Features selection/extraction algorithms can be divided into three types. The first type, called \emph{filter methods}, is based uniquely on data analysis in the sense that the method is independant of any classifier. Features are ranked according to a statistical analysis of the data. For example, the Principal Component Analysis (PCA) described in \cite{jimenez1998supervised} is a typical unsupervised filter method. Bruzzone \emph{et al.}\cite{bruzzone1995extension} develop a supervised filter method based on Jeffries-Matusita distance to maximize the separability of class distribution. A filter based on the Pearson $\chi^2$ statistical test has been used on biomedical data\cite{biesiada2007feature}. The use of correlation between bands has been explored with hyperspectral data\cite{demir2008phase}. In general, these methods have the advantage to be fast and usable with any classifier but they do not take into account the strength and weakness of the chosen classifier and do not optimize directly the classification process.
+
+The second sort are known as \emph{wrapper methods} which can be seen as search method to determine the best subset of variables for a given learning model. As exhaustive searches are too expensive in terms of processing time, several search strategies have been designed. Some are optimal under particular hypothesis as the branch and bound algorithm \cite{narendra1977branch} optimal under the condition of a monotonic criterion function and other sub-optimal but easier to set up. Whitney \cite{whitney1971direct} proposed a forward search adding feature one by one \cite{whitney1971direct} when Marill and Green \cite{marill1963effectiveness} use a backward search eliminating features one by one. Some papers propose to combine these two search method \emph{somol1999adaptive}. The advantage of such methods compare to filter methods is that they are dedicated to a particular model but on the other hand, as they require the training of multiple models to test various set of variables, they tend to be more time consuming. The proposed in this paper is actually a wrapper method which has been optimized in order to accelerate model learning and testing which is the weak point of this family.
+
+The third type corresponds to the \emph{embedded method} which do not separate the features selection process from the learning algorithm and allow interaction between the two processes. The basic example of such method is the decision tree algorithm in which a feature is selected for the creation of each node. Embedded methods also exist for other models, e.g. SVM \cite{guyon2002gene,weston2003use}.
+
+However, this large diversity of methods for feature selection usually do not scale well with the number of pixels to be processed \cite{fauvel2015fast}. Nevertheless, methods based on Gaussian Mixture Models (GMM) have several interesting properties that make them suitable for feature selection in the context of large amount of data. By taking advantage of their intrinsic properties, it is possible to increase the computational efficiency with respect to standard implementation.
 
 Several strategy have been explored to perform feature selection and, among them, wrapper methods receive a certain interest of the community. Wrapper methods can be seen as a search method to determine the best subset of variables for a given learning model. As exhaustive searches are out of question in a practical amount of time, numerous search strategies have been designed. Some optimal are under particular hypothesis \cite{narendra1977branch} and other suboptimal but easier to set up \cite{whitney1971direct}\cite{somol1999adaptive}. Such methods have the advantage to tune the selection to make the most of a particular classifier but require the training of multiple models to test various set of variables which can make them slow if the training is not optimized.
 
@@ -204,31 +210,13 @@ samples of class $c$.
         \caption{Number of parameters $\eta_c$ by class in function of dimension $d$: $\eta_c=d(d+3)/2+1$.\label{fig:nb-param}}
     \end{figure}
 
-    %% TODO: il faut reprendre cette partie en détaillant plus
-    %% Il y a deux approches: une qui regularise le probleme inverse,
-    %% ridge est une solution, mais il y en a d'autres. Voir le
-    %% paragraphe qui est consacré à cela dans la thèse d'Anthony ->
-    %% elle arrive pas mail. Ensuite, il y a la réduction de dimension
-    %% données des refs (voir intro du papier JSTARS) et dans la
-    %% réduction  de dimension, il  y a  la sélection de  features. La
-    %% conclusion doit s'enchainer avec la partie suivante.
     There are two major solutions to this problem. First option is to stabilize the inversion of the covariance matrices. Some methods investigate the use of constraints on the direct problem. Reynolds \emph{et al.} \cite{reynolds1995robust} proposed to use diagonal covariance matrices. It is also possible to force the diagonal element to be higher than a given value by maximizing the GMM likelihood \cite{hathaway1985constrained}. Celeux and Govaert \cite{celeux1995gaussian} suggest to use equality constraints between coefficients of the covariance matrix in a parsimonious cluster-based GMM framework. Others papers propose to work on the inverse problem. A classical method is to use a regularization method as the well-known ridge regularization \cite{hoerl1970ridge}. A ridge regularization aims to stabilize the inversion by replacing the covariance matrix $\boldsymbol{\Sigma}_c$ by $\boldsymbol{\Sigma}_c + \tau \mathbf{I}$ where $\tau$ is a positive parameter and $\mathbf{I}$ the identity matrix. Jensen \emph{et al.} \cite{jensen2008regression} propose a different approach using a sparsity approximation to inverse the covariance matrix.
 
+    %% Question: tu suggérais de reprendre ici "Ensuite, il y a la réduction de dimension données des refs (voir intro du papier JSTARS) et dans la réduction  de dimension, il  y a  la sélection de features." Le soucis que je vois, c'est que je détaille déjà dans l'intro les différentes méthodes de sélection/extraction et je trouve que ça devient pas très clair si je reprends tout en me basant sur le papier JSTARS. J'aurais dit avt "il y a trois types de sélection: filtre, wrapper, embedded blablabla" et ensuite ça me fait reprendre ici une autre distinction "supervisé/non-supervisé" si je me base sur jstars qui est un peu redondante il me semble. Qu'en dis-tu ?
     Second option is to reduce dimension. Features extraction/selection methods have been developed in order to reduce the dimension with various approaches described in Section~\ref{sec:intro}. In this study, this latter option is explored and a feature selection method named sequential forward features selection is presented after a brief overview of the selection algorithms in the next Section.
 
 \section{Sequential forward features selection}
 \label{sec:selection}
-
-%%% Debut Déplacer vers l'intro
-The objective of feature selection is to retrieve the most compact representation of the data with minimum loss of information \cite{Guyon:2006:FEF:1208773}. By deleting the redundant information, feature selection allows to reduce dimension and thus avoid statistical issue, increase algorithm speed and limit storage requirements. Moreover, it adds several beneficial side effects. It improves data understanding by identify where is the most relevant information and it is then possible to save resources when organizing a new data acquisition.% TODO: add ref. et example
-
-%% Cette partie, dans l'intro il faut la rallonger: mieux décrire ces trois méthodes, dire les avantages et les inconvénients de chaque approche et positionner notre approche par rapport à tout cela (je dis cela sans avoir relu l'intro). Tu peux t'inspirer de la thèse de Arnaud Lebris et des pages 58-66)
-Features selection algorithms can be divided into three types. The first type, called \emph{filter methods}, is based uniquely on data analysis. Features are ranked according to a statistical analysis of the data. For example, the Principal Component Analysis (PCA) described in \cite{jimenez1998supervised} is a typical filter method and there is numerous other methods \cite{bruzzone1995extension,biesiada2007feature,demir2008phase}.
-
-The second sort are known as \emph{wrapper methods} which can be seen as search method to determine the best subset of variables for a given learning model. As exhaustive searches are to expansive in terms of processing time, several search strategies have been designed. Some are optimal under particular hypothesis \cite{narendra1977branch} and other sub-optimal but easier to set up \cite{whitney1971direct,somol1999adaptive}. The advantage of such methods compare to filter methods is that they are dedicated to a particular model but on the other hand, as they require the training of multiple models to test various set of variables, they tend to be more time consuming.
-
-The third type corresponds to the \emph{embedded method} which do not separate the features selection process from the learning algorithm and allow interaction between the two processes. The basic example of such method is the decision tree algorithm in which a feature is selected for the creation of each node. Embedded methods also exist for other models, e.g. SVM \cite{guyon2002gene,weston2003use}.
-%%% Fin déplacer
 
 The feature selection method proposed in this work is a wrapper method associated to GMM models. Two elements are needed to set up a wrapper method:
 \begin{enumerate}
